# tempocom-app

./: .gitignore  =4.2.0  Data_cleaning.ipynb  Dealy_distrbution.ipynb  Home.py  README.md  VCE.ipynb  constants.json  pyproject.toml  requirements.txt  utils.py
.github/workflows/: deploy_to_prod.yml
app/: Home.py  pyrightconfig.json
app/components/: __init__.py
app/components/app_card/: app_card.css  app_card.py
app/components/login/: LoginPopup.py
app/components/map/: Map.py
app/components/misc/: Responsiveness.py
app/components/navbar/: NavBar.py  navbar.css
app/pages/: About.py  Login.py  Maintenance.py  PunctualityManagement.py  Sandbox.py  TrackWorksAdvisor.py
app/styles/: README.md  __init__.py  components.css  global.css  themes.css
components/: SecureLogin.py  cards.py  page_template.py
features/macro_network/: MacroLinks.py  MacroNetworkController.py  MacroNetworkView.py
features/macro_network/tests/: test_macro_network.py
features/operational_points/: OperationalPoints.py  OperationalPointsController.py  OperationalPointsView.py
features/operational_points/tests/: test_operational_points.py
features/punctuality/: PunctualityController.py  PunctualityView.py
features/punctuality/models/: Boxplots.py  Punctuality.py
features/track_works/: TrackWorks.py  TrackWorksController.py  TrackWorksView.py
features/track_works/tests/: test_track_works.py
modules/: DBConnector.py  LakeReader.py  __init__.py
objects/: Boxplot.py  Coupures.py  Delay_network.py  MacroNetwork.py
pages/: About.py  All_Labs.py  CoLT_Browser.py  Delay_Calculator.py  Delay_Visualizer.py  Domino_Effect_Analyzer.py  KeepFree_Advisor.py  Network_Editor.py  template.py.txt  template.txt
tempocom/modules/streamlit/: Page.py  __init__.py  useState.py
tempocom/services/: DBConnector.py
tests/: Test .ipynb  Test.ipynb  test_MacroNetwork.py  test_delay_bubble_map.py  test_macro_network.py
