[tool.poetry]
name = "tempocom"
version = "0.1.0"
description = "Application de gestion de réseau de transport"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.10.3"
folium = "^0.15.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
streamlit = "1.44.1"
streamlit-folium = "^0.15.0"
python-dotenv = "^1.0.0"
pretty-errors = "^1.2.25"
pydeck = "^0.9.1"
pytest = "^8.4.1"
seaborn = "^0.13.2"
plotly = "^6.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 