[tool.poetry]
name = "tempocom"
version = "0.1.0"
description = "Application de gestion de réseau de transport"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "tempocom", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.10.3"
folium = "^0.15.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
streamlit = "1.44.1"
streamlit-folium = "^0.15.0"
python-dotenv = "^1.0.0"
pretty-errors = "^1.2.25"
pydeck = "^0.9.1"
pytest = "^8.4.1"
seaborn = "^0.13.2"
plotly = "^6.1.2"
azure-storage-blob = "^12.25.1"
azure-storage-file = "^2.1.0"
azure-storage-file-datalake = "^12.20.0"
pyspark = "^4.0.0"
azure-identity = "^1.23.0"
pyodbc = "^5.2.0"
streamlit-option-menu = "^0.4.0"
sqlalchemy = "^2.0.43"
duckdb = "^1.4.1"
polars = "^1.34.0"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
poetry-dotenv-plugin = "^0.2.0"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
testpaths = ["features"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".*", "build", "dist", "node_modules", "venv", "__pycache__"]
env_files = [".env"]


[tool.poetry.scripts]
tempocom = "tempocom.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 

